--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 	<main>
 		@@include('html/introduction.html',{})
 		@@include('html/collection.html',{})
+		@@include('html/collection2018.html',{})
+		@@include('html/new.html',{})
+		@@include('html/brands.html',{})
+		@@include('html/media.html',{})
 	</main>
+	@@include('html/footer.html',{})
 </body>
 </html>
